--- a/package.json
+++ b/package.json
@@ -1,6 +1,4 @@
 {
-  "name": "notes_app",
-  "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -9,10 +7,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native-stack": "^6.9.17",
     "expo": "~49.0.15",
+    "expo-sqlite": "^11.6.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-native": "0.72.6",
+    "react-native-toast-message": "^2.1.8",
+    "react-native-vector-icons": "^10.0.2",
+    "sqlite": "^5.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
